# Cool-Compiler

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  __mini.cool  __tmp_test.cool  brili_simple.py  diario_sessao_codegen.md  main.cpp  saida_mvp.bril  saida_mvp.json  test_simple.txt  teste.txt  teste2.txt  teste3.txt  teste_mvp.cool  vcpkg.json
headers/: codegen.h  lexer.h  parser.h  semantic.h  sym_table.h  token.h
src/: main.cpp
src/codegen/: codegen.cpp
src/lexer/: lexer.cpp  token.cpp
src/parser/: parser.cpp
src/semantic/: semantic.cpp
src/sym_table/: sym_table.cpp
